minimal vm build fail: missing #include

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • gc
    • b23
    • arm

        $ make CONF=linux-arm-normal-minimal-release
        ...
        /tmp/ccZr5Ug6.ltrans8.ltrans.o: In function `OffsetTableContigSpace::block_start_const(void const*) const':
        <artificial>:(.text+0x545c): undefined reference to `BlockOffsetTable::block_start(void const*) const'
        /tmp/ccZr5Ug6.ltrans20.ltrans.o: In function `OffsetTableContigSpace::verify() const':
        <artificial>:(.text+0x64d0): undefined reference to `BlockOffsetTable::block_start(void const*) const'
        collect2: error: ld returned 1 exit status
        lib/CompileGtest.gmk:58: recipe for target '/home/build/jdk-jdk/build/linux-arm-normal-minimal-release/hotspot/variant-minimal/libjvm/gtest/libjvm.so' failed

              Assignee:
              Boris Ulasevich
              Reporter:
              Boris Ulasevich
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: