8207044: minimal vm build fail: missing #include

Add missing #include

Reviewed-by: kbarrett, shade